[project]
name = "klink-server-a2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-functions>=1.22.1",
    "blinker==1.8.2",
    "click==8.1.7",
    "colorama==0.4.6",
    "flask==3.0.3",
    "flask-cors==4.0.1",
    "itsdangerous==2.2.0",
    "jinja2==3.1.4",
    "markupsafe==2.1.5",
    "werkzeug==3.0.3",
]
